--- a/src/components/editor/EditorPane/EditorPane.scss
+++ b/src/components/editor/EditorPane/EditorPane.scss
@@ -19,6 +19,13 @@
     .code-editor {
         flex: 1;
         background: $oc-gray-9;
+        display: flex;
+        flex-direction: column;
+        .CodeMirror {
+            font-size: 1rem;
+            flex: 1;
+            font-family: 'Source Code Pro', monospace;
+        }
     }
     .tags {
         padding-left: 1rem;
